@@ -2,6 +2,8 @@ Changes to 1.2.9 +nb
 [FIXES]
 *motd.php --> month is now a valid DATETIME, so set to 31 as last day returns an error
 *lib/clan/clan_default.php -> GROUP BY condition again (see mysql 8 issues) does not accept an order anymore (rightfully)
+[CHANGES]
+*lib/commentary.php --> GMs can now delete their own comments
 
 Changes to 1.2.8 +nb
 [FIXES]
